# aoc2020

./: .mypy.ini  LICENSE  pyproject.toml
.github/workflows/: python_checks.yaml  setup_poetry.yml
.pyre/: pyre.stderr
aoc2020/day1/: main.py
aoc2020/day10/: main.py
aoc2020/day11/: main.py
aoc2020/day12/: main.py
aoc2020/day13/: main.py
aoc2020/day14/: main.py
aoc2020/day15/: main.py
aoc2020/day16/: main.py
aoc2020/day17/: main.py
aoc2020/day18/: main.py
aoc2020/day19/: main.py
aoc2020/day2/: main.py
aoc2020/day20/: main.py
aoc2020/day21/: main.py
aoc2020/day22/: main.py
aoc2020/day23/: main.py
aoc2020/day24/: main.py
aoc2020/day25/: main.py
aoc2020/day3/: main.py
aoc2020/day4/: main.py
aoc2020/day5/: main.py
aoc2020/day6/: main.py
aoc2020/day7/: main.py
aoc2020/day8/: instructions.py  interpreter.py  main.py
aoc2020/day9/: main.py
aoc2020/shared/: models.py  parser_utils.py  puzzle.py  solver.py  typing_utils.py
ressources/day_19/: input
tests/: conftest.py
tests/day1/: test_main.py
tests/day10/: test_main.py
tests/day11/: test_main.py
tests/day12/: test_main.py
tests/day13/: test_main.py
tests/day14/: test_main.py
tests/day15/: test_main.py
tests/day16/: test_main.py
tests/day17/: test_main.py
tests/day18/: test_main.py
tests/day19/: test_main.py
tests/day2/: test_main.py
tests/day20/: test_main.py
tests/day21/: test_main.py
tests/day22/: test_main.py
tests/day23/: test_main.py
tests/day24/: test_main.py
tests/day25/: test_main.py
tests/day3/: test_main.py
(+7 files in other folders)
