[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = ""
authors = ["Martin Keogh <martin1keogh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
pydantic = "^1.7.3"
lark-parser = "^0.11.1"
toolz = "^0.11.1"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
pytest = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
