[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = ""
authors = ["Martin Keogh <martin1keogh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pydantic = "^1.8.2"
lark-parser = "^0.12.0"
toolz = "^0.11.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.5"
types-requests = "^2.27.29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
